--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "npm run i18n:build && next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "npm run i18n:build && jest"
   },
   "dependencies": {
     "@growthbook/growthbook-react": "^1.6.1",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^19.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "jest": "^30.1.3",
     "typescript": "^5"
   }
 }
